--- a/ui/index.html
+++ b/ui/index.html
@@ -40,38 +40,38 @@
         document.write('<script type="text/javascript" src="http://localhost/js_libs/ui.js">\x3C/script>');
         document.write('<link rel="stylesheet" href="http://localhost/js_libs/ui.css" type="text/css"/>');
       } else if ((document.location.hostname == 'localhost') && (document.location.protocol == 'https:')) {
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/jquery.min.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/jquery.browser.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/jquery.svg.min.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/jquery.svgdom.min.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/vkbeautify.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/util.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/printf.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/strftime.min.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/parsequery.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/underscore.min.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/jquery.caret.min.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/jquery.cookie.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/relaxngui.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/jquery.min.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/jquery.browser.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/jquery.svg.min.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/jquery.svgdom.min.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/vkbeautify.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/util.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/printf.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/strftime.min.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/parsequery.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/underscore.min.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/jquery.caret.min.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/jquery.cookie.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/relaxngui.js">\x3C/script>');
 
-        document.write('<script type="text/javascript" src="https://localhost/js_libs/ui.js">\x3C/script>');
-        document.write('<link rel="stylesheet" href="https://localhost/js_libs/ui.css" type="text/css"/>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/ui.js">\x3C/script>');
+        document.write('<link rel="stylesheet" href="https://cpee.org/js_libs/ui.css" type="text/css"/>');
       } else {
-        document.write('<script type="text/javascript" src="http://gruppe.wst.univie.ac.at/js_libs/jquery.min.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="http://gruppe.wst.univie.ac.at/js_libs/jquery.browser.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="http://gruppe.wst.univie.ac.at/js_libs/jquery.svg.min.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="http://gruppe.wst.univie.ac.at/js_libs/jquery.svgdom.min.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="http://gruppe.wst.univie.ac.at/js_libs/vkbeautify.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="http://gruppe.wst.univie.ac.at/js_libs/util.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="http://gruppe.wst.univie.ac.at/js_libs/printf.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="http://gruppe.wst.univie.ac.at/js_libs/strftime.min.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="http://gruppe.wst.univie.ac.at/js_libs/parsequery.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="http://gruppe.wst.univie.ac.at/js_libs/underscore.min.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="http://gruppe.wst.univie.ac.at/js_libs/jquery.caret.min.js">\x3C/script>');
-        document.write('<script type="text/javascript" src="http://gruppe.wst.univie.ac.at/js_libs/jquery.cookie.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/jquery.min.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/jquery.browser.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/jquery.svg.min.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/jquery.svgdom.min.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/vkbeautify.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/util.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/printf.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/strftime.min.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/parsequery.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/underscore.min.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/jquery.caret.min.js">\x3C/script>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/jquery.cookie.js">\x3C/script>');
 
-        document.write('<script type="text/javascript" src="http://gruppe.wst.univie.ac.at/js_libs/ui.js">\x3C/script>');
-        document.write('<link rel="stylesheet" href="http://gruppe.wst.univie.ac.at/js_libs/ui.css" type="text/css"/>');
+        document.write('<script type="text/javascript" src="https://cpee.org/js_libs/ui.js">\x3C/script>');
+        document.write('<link rel="stylesheet" href="https://cpee.org/js_libs/ui.css" type="text/css"/>');
       }
     </script>
     <!-- custom stuff, play arround  -->
