--- a/ui/direct.html
+++ b/ui/direct.html
@@ -78,7 +78,7 @@
       <li class="orgmodel"><a class='link' href=""></a> ⇒ [<a class='model' href="">View Model</a>]</li>
     </template>   <!--}}}-->
 
-    <ui-tabbed id="worklist">
+    <ui-tabbed class="hidden" id="worklist">
       <ui-tabbar>
         <ui-tab class="switch"                                                ></ui-tab>
         <ui-tab class=""          data-tab="login"        id="tablogin"       >Login</ui-tab>
@@ -126,9 +126,9 @@
 
     <ui-rest class="hidden" id='main'>
       <ui-tabbar>
-          <ui-before                                          ></ui-before>
-          <ui-tab class="default" data-tab="task" id="tabtask">Tasks</ui-tab>
-          <ui-behind                                          ></ui-behind>
+        <ui-before                                          ></ui-before>
+        <ui-tab class="default" data-tab="task" id="tabtask">Tasks</ui-tab>
+        <ui-behind                                          ></ui-behind>
       </ui-tabbar>
       <ui-content>
         <ui-area data-belongs-to-tab="task" id="areatask"> <!--{{{-->
