--- a/ui/direct.html
+++ b/ui/direct.html
@@ -132,7 +132,7 @@
       </ui-tabbar>
       <ui-content>
         <ui-area data-belongs-to-tab="task" id="areatask"> <!--{{{-->
-          <div id="dat_message">Currently no tasks available.</div>
+          <div id="dat_message" style="display: none;">Currently no tasks available.</div>
           <table id="dat_tasks" class="layout"></table>
         </ui-area> <!--}}}-->
       </ui-content>
