--- a/ui/index.html
+++ b/ui/index.html
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="/js_libs/underscore.min.js"></script>
     <script type="text/javascript" src="/js_libs/jquery.caret.min.js"></script>
     <script type="text/javascript" src="/js_libs/jquery.cookie.js"></script>
+    <script type="text/javascript" src="/js_libs/marked.min.js"></script>
 
     <script type="text/javascript" src="/js_libs/relaxngui.js"></script>
 
