--- a/ui/direct.html
+++ b/ui/direct.html
@@ -96,7 +96,7 @@
               <td><input name="user-name" type="text" value=""/></td>
             </tr>
             <tr>
-              <td>User Name:</td>
+              <td>Password:</td>
               <td><input name="pass" disabled="disabled" type="text" value="Not necessary in this demo."/></td>
               <td><input name="getListBt" type="submit" value="get Worklist"/></td>
             </tr>
