fixed some bugs

--- a/ui/direct.html
+++ b/ui/direct.html
@@ -131,7 +131,7 @@
         <ui-behind                                          ></ui-behind>
       </ui-tabbar>
       <ui-content>
-        <ui-area data-belongs-to-tab="task" id="areatask"> <!--{{{-->
+        <ui-area data-belongs-to-tab="task" id="areatasklist"> <!--{{{-->
           <div id="dat_message" style="display: none;">Currently no tasks available.</div>
           <table id="dat_tasks" class="layout"></table>
         </ui-area> <!--}}}-->
