--- a/ui/container.html
+++ b/ui/container.html
@@ -1,16 +1,16 @@
 <!--
-  This file is part of CPEE.
+  This file is part of CPEE-WORKLIST.
 
-  CPEE is free software: you can redistribute it and/or modify it under the terms
+  CPEE-WORKLIST is free software: you can redistribute it and/or modify it under the terms
   of the GNU General Public License as published by the Free Software Foundation,
   either version 3 of the License, or (at your option) any later version.
 
-  CPEE is distributed in the hope that it will be useful, but WITHOUT ANY
+  CPEE-WORKLIST is distributed in the hope that it will be useful, but WITHOUT ANY
   WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
   PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
   You should have received a copy of the GNU General Public License along with
-  CPEE (file COPYING in the main directory).  If not, see
+  CPEE-WORKLIST (file LICENSE in the main directory).  If not, see
   <http://www.gnu.org/licenses/>.
 -->
 
@@ -34,7 +34,8 @@
     <script type="text/javascript" src="/js_libs/jquery.caret.min.js"></script>
     <script type="text/javascript" src="/js_libs/jquery.cookie.js"></script>
     <script type="text/javascript" src="/js_libs/marked.min.js"></script>
+
+    <link rel="stylesheet" href="css/container.css" type="text/css"/>
   </head>
-  <body>
-  </body>
+  <body is='x-ui-'></body>
 </html>
