fixed structured; ported index to structured

--- a/ui/structured.html
+++ b/ui/structured.html
@@ -129,16 +129,16 @@
       </ui-tabbar>
       <ui-content>
         <ui-area data-belongs-to-tab="task" id="areatasklist"> <!--{{{-->
-          <div   id="dat_tasks_priority_high_head" class="dat_heading hidden"></div>
-          <table id="dat_tasks_priority_high"      class="dat_table"></table>
-          <div   id="dat_tasks_own_head"           class="dat_heading hidden"><span>Tasks I currently work on ...</span></div>
-          <table id="dat_tasks_own"                class="dat_table"></table>
-          <div   id="dat_tasks_priority_head"      class="dat_heading hidden"><span>Tasks initiated by me ...</span></div>
-          <table id="dat_tasks_priority"           class="dat_table"></table>
-          <div   id="dat_tasks_others_head"        class="dat_heading hidden"><span>Tasks initiated by others ... (but I can do them as well)</span></div>
-          <table id="dat_tasks_others"             class="dat_table"></table>
-          <div   id="dat_tasks_others_work_head"   class="dat_heading hidden"><span>Tasks others currently work on ...</span></div>
-          <table id="dat_tasks_others_work"        class="dat_table"></table>
+          <div   class="dat_tasks_priority_high_head dat_heading hidden"></div>
+          <table class="dat_tasks_priority_high      dat_table dat_indent_table"></table>
+          <div   class="dat_tasks_own_head           dat_heading hidden"><span>Tasks I currently work on ...</span></div>
+          <table class="dat_tasks_own                dat_table dat_indent_table"></table>
+          <div   class="dat_tasks_priority_head      dat_heading hidden"><span>Tasks initiated by me ...</span></div>
+          <table class="dat_tasks_priority           dat_table dat_indent_table"></table>
+          <div   class="dat_tasks_others_head        dat_heading hidden"><span>Tasks initiated by others ... (but I can do them as well)</span></div>
+          <table class="dat_tasks_others             dat_table dat_indent_table"></table>
+          <div   class="dat_tasks_others_work_head   dat_heading hidden"><span>Tasks others currently work on ...</span></div>
+          <table class="dat_tasks_others_work        dat_table dat_indent_table"></table>
         </ui-area> <!--}}}-->
       </ui-content>
     </ui-rest>
