--- a/ui/structured.html
+++ b/ui/structured.html
@@ -140,6 +140,10 @@
           <div   class="dat_tasks_others_work_head   dat_heading hidden"><span>Tasks others currently work on ...</span></div>
           <table class="dat_tasks_others_work        dat_table dat_indent_table"></table>
         </ui-area> <!--}}}-->
+        <ui-resizehandle data-belongs-to-tab="task" id="detailcolumnresizer" data-label="drag to resize" class="hidden"></ui-resizehandle>
+        <ui-area data-belongs-to-tab="task" id="detailcolumn" class="hidden">
+           <iframe src=""></iframe>
+        </ui-area>
       </ui-content>
     </ui-rest>
 
