--- a/ui/structured.html
+++ b/ui/structured.html
@@ -59,6 +59,7 @@
           <button class='task_do' value=''>Do it!</button>
           <button class='task_giveback' value=''>Others should do it!</button>
         </td>
+        <td class='filler'></td>
       </tr>
     </template>   <!--}}}-->
     <template id="dat_template_tasks_multi"> <!--{{{-->
@@ -68,7 +69,7 @@
           <button class='task_continue' value=''>Continue ...</button>
           <button class='task_do' value=''>Do it!</button>
         </td>
-        <td class='deadline'><em>(until <span></span></em>)</td>
+        <td class='deadline filler'><em>(until <span></span></em>)</td>
       </tr>
     </template>   <!--}}}-->
     <template id="dat_template_orgmodels"> <!--{{{-->
