direct ported; old worklist logic deleted

--- a/ui/direct.html
+++ b/ui/direct.html
@@ -1,3 +1,4 @@
+        <td class='filler'></td>
 <!--
   This file is part of CPEE-WORKLIST.
 
@@ -59,6 +60,7 @@
           <button class='task_do' value=''>Do it!</button>
           <button class='task_giveback' value=''>Others should do it!</button>
         </td>
+        <td class='filler'></td>
       </tr>
     </template>   <!--}}}-->
     <template id="dat_template_tasks_multi"> <!--{{{-->
@@ -68,7 +70,7 @@
           <button class='task_continue' value=''>Continue ...</button>
           <button class='task_do' value=''>Do it!</button>
         </td>
-        <td class='deadline'><em>(until <span></span></em>)</td>
+        <td class='deadline filler'><em>(until <span></span></em>)</td>
       </tr>
     </template>   <!--}}}-->
     <template id="dat_template_orgmodels"> <!--{{{-->
